# audio-wavemaker

./: .gitignore  local.properties
app/: build.gradle
app/src/androidTest/java/com/frnt/zawzaw/audiowavemaker/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Oscillator.cpp  Oscillator.h  native-lib.cpp
app/src/main/java/com/frnt/zawzaw/audiowavemaker/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/frnt/zawzaw/audiowavemaker/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
